tests/specs/check/unstable_suggestion/main.out
Check [WILDCARD]main.ts
TS2339 [ERROR]: Property 'listenDatagram' does not exist on type 'typeof Deno'. 'Deno.listenDatagram' may be an unstable API. Try changing the 'lib' compiler option to include 'deno.ns' or add a triple-slash directive to the top of your entrypoint (main file): /// <reference lib="deno.ns" />
Deno.listenDatagram({
     ~~~~~~~~~~~~~~
    at file:///[WILDLINE]/main.ts:5:6

error: Type checking failed.
